
New feature is student export added to the InfoBook as an action
button for the student_list.

The db tables "form" and "tidcid" both had the old varchar(10) for
teacher_id, now corrected in the new patch.

list_community now compatible with listoptions.

Reorganised the infobook search scripts and added the option to search
any community for office and admin users.


Version ClaSS-0.8.12 release (2007/03/15)
-----------------------------------------

The rowaction buttons are now generated using a library call to
html_functions, uses the same extrabuttons function as the other
buttonmenus.

Updated the medium.xsl report template to use summary elements.

Added portfolio_accounts to the Admin book - in a state of heavy
development and not ready for use yet.

Fixed up the ents_list form in the InfoBook.

Version ClaSS-0.8.11 release (2007/03/12)
-----------------------------------------

Added a logout call for the eportfolio to the js logout function.

Added eportfolio_db_prefix to the school.php config options to bring
into line with how these often implement shared databases.

Bugfix to the new http/report_reports_print.php which was not getting
the transform right. This is now passed through the imbedded
xml-check-action div in the report_reports_list.php page.


Version ClaSS-0.8.10 release (2007/02/28)
-----------------------------------------

A third rating of 'general' added to the comments.

Removed the length limit for incident details.

Added a pastoralemailfooter to lang/en/class.php which is used by both
incidents and comments.

New options added to school.php. $CFG->emailoff disables sending all
emails to staff (only the administrator user's email address will be
active). $CFG->emailcomments will notify responsibile staff by email
of new commments, in the same way that incidents are already
posted. Incidents can now be turned off with $CFG->emailincidents.

Bugfix to the EntryBook which solves new students with enrolstatus of